@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: PrintFile.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/12/03 10:21:53 $
-  Version:   $Revision: 1.15 $
+  Date:      $Date: 2004/12/03 11:55:37 $
+  Version:   $Revision: 1.16 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -86,7 +86,7 @@ int main(int argc, char* argv[])
    std::string transferSyntaxName = e1->GetTransfertSyntaxName();
    std::cout << " TransferSyntaxName= [" << transferSyntaxName << "]" << std::endl;
    
-   if (  transferSyntaxName != "Implicit VR - Little Endian"
+/*   if (  transferSyntaxName != "Implicit VR - Little Endian"
       && transferSyntaxName != "Explicit VR - Little Endian"     
       && transferSyntaxName != "Deflated Explicit VR - Little Endian"      
       && transferSyntaxName != "Explicit VR - Big Endian"
@@ -97,7 +97,7 @@ int main(int argc, char* argv[])
          f1->GetPixelReadConverter()->Print();
       std::cout << std::endl << "==========================================="
                   << std::endl; 
-   }
+   }*/
    
    if(e1->IsReadable())
       std::cout <<std::endl<<fileName<<" is Readable"<<std::endl;
